fixed some image size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2842,15 +2842,44 @@ max-height: 27em
 .contactSocial{
 	margin-left: 2.5em;
 }
-.contactInformation
+
+.contactResume
 {
 	margin-left: 2.5em;
 }
 
 /* 100% Image Width on Smaller Screens */
+
+@media only screen and (max-width: 600px){
+
+
+	.contactSocial{
+		margin-left: 0em;
+	}
+
+}
 @media only screen and (max-width: 460px){
 
 	.contactInformation
+	{
+		margin-left: 0em;
+	}
+
+	.contactSocial{
+		margin-left: 0em;
+	}
+
+	.contactResume
+	{
+		margin-left: 1em;
+	}
+}
+
+@media only screen and (max-width: 440px){
+
+
+
+	.contactResume
 	{
 		margin-left: 0em;
 	}
@@ -3195,7 +3224,9 @@ max-height: 27em
 
 				.spotlights > section > .image {
 					width: 100%;
-					height: 50vh;
+					height: 100%;
+					min-height: 50em;
+
 				}
 
 				.spotlights > section > .content {
@@ -3215,8 +3246,9 @@ max-height: 27em
 		@media screen and (max-width: 736px) {
 
 			.spotlights > section > .image {
-				height: 50vh;
-				min-height: 15em;
+				height: 100%;
+				min-height: 50em;
+
 			}
 
 			.spotlights > section > .content {
@@ -4013,6 +4045,8 @@ max-height: 27em
 	max-width: 40em;
 	max-height: 25em;
  height: 100%;
+ margin-left: auto;
+ margin-right: auto;
  border-radius: 1em;
 }
 
@@ -4034,6 +4068,14 @@ max-height: 27em
 
 				#intro p br {
 					display: none;
+				}
+
+				.responsiveImage {
+					display: block;
+		  margin-left: auto;
+		  margin-right: auto;
+		  width: 75%;
+				 border-radius: 1em;
 				}
 
 			}
